<resources>
    <string name="app_name">Рыбалка Plus</string>
    <string name="sign_out">Выйти</string>
    <string name="maps">Карта</string>
    <string name="weather">Погода</string>
    <string name="send_a_message">Отправить</string>
    <string name="title_activity_maps">Карта</string>
    <string name="weather_activity_name">Текущая погода</string>
    <string name="add_foto_from_camera">Фото с камеры</string>
    <string name="add_foto_from_galery">Фото с галереи</string>
    <string name="show_on_the_map">Показать на карте</string>
    <string name="name_point">Название точки</string>
    <string name="date_point">Дата точки</string>
    <string name="point_title_label">Название точки</string>
    <string name="point_title_label_hint">введите название точки</string>
    <string name="point_description_label_hint">введите описание точки</string>
    <string name="new_point">Создать точку</string>
    <string name="weather_conditions">Погодные условия</string>
    <string name="weather_temp">температура</string>
    <string name="pressure">Давление</string>
    <string name="weather_humidity">Влажность</string>
    <string name="weather_cloudy">Облачность</string>
    <string name="weather_speed_wind">Скорость ветра</string>
    <string name="my_point">Мои точки</string>
    <string name="user_name">name</string>
    <string name="message_text">text</string>
    <string name="time">time</string>
    <string name="point_description_label">Описание точки</string>
    <string name="point_date">Дата создания точки</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Closed</string>
    <string name="auth">Авторизация</string>
    <string name="lon">Долгота</string>
    <string name="lat">Широта</string>
    <string name="delete_point">Удалить</string>
    <string name="photo_galery">Фото галерея</string>
    <string name="send">Отп.</string>
    <string name="text_nav_header">«Боги не засчитывают в счет жизни время, проведенное на рыбалке»</string>
    <string name="sunrise">Восход солнца</string>
    <string name="sunset">Закат солнца</string>
    <string name="last_update">Последнее обновление даных погоды</string>
    <string name="humidity">humidity</string>
    <string name="pressure_weather">pressure_weather</string>
    <string name="wind">wind</string>
    <string name="city">Город</string>
    <string name="temperatura">Температура: %.1f °C</string>
    <string name="temperatura2">"%.1f °C"</string>
    <string name="my_point_label">Мои точки</string>
    <string name="my_point_detail_label">Описание точки</string>
    <string name="galery_label">Галерея</string>


</resources>
