<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_foto_from_galery"
        android:title="@string/add_foto_from_galery"
        app:showAsAction="never"/>
    <item
        android:id="@+id/add_foto_from_camera"
        android:title="@string/add_foto_from_camera"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_create_new_points"
        android:icon="@drawable/ic_add_poin_black_24dp"
        android:title="@string/new_point"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_my_points"
        android:title="@string/my_point"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
</menu>