<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_chat"
    android:orientation="vertical"
    android:weightSum="2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/point_title_label" />

        <EditText
            android:id="@+id/point_title_label_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:hint="@string/point_title_label_hint" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/point_description_label" />

        <EditText
            android:id="@+id/point_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:hint="@string/point_description_label_hint" />


    </LinearLayout>

    <LinearLayout
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/weather_conditions"
            android:textColor="#000" />

        <TextView
            android:id="@+id/point_temperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_temp"
            android:textColor="#000" />

        <TextView
            android:id="@+id/point_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textColor="#000" />

        <TextView
            android:id="@+id/point_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_humidity"
            android:textColor="#000" />
        <!--<TextView-->
        <!--android:textColor="#000"-->
        <!--android:id="@+id/point_condition"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/weather_cloudy" />-->
        <TextView
            android:id="@+id/point_wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_speed_wind"
            android:textColor="#000" />

        <TextView
            android:id="@+id/point_longituda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lon"
            android:textColor="#000" />

        <TextView
            android:id="@+id/point_lantituda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lat"
            android:textColor="#000" />

        <TextView
            android:id="@+id/point_date"
            style="?android:textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/point_date"
            android:textColor="#000"
            android:textStyle="bold|italic" />


    </LinearLayout>


</LinearLayout>